下载资料验证和到处xls
- 下载资料时验证姓名
- 到处参会人员为xls和csv
- 修改form报错css样式

--- a/meeting/templates/base.html
+++ b/meeting/templates/base.html
@@ -58,7 +58,7 @@
     <div class="clear h10"></div>
     <div class="container">
         {% if messages %}
-            <div class="flash">
+            <div class="flash" style="text-align: center;">
                 {% for message in messages %}<p id="message_{{ forloop.counter }}">{{ message }}</p>{% endfor %}
                 <span class="close"><a href="javascript:close();">x</a></span>
             </div>
