--- a/meeting/templates/confirm_user.html
+++ b/meeting/templates/confirm_user.html
@@ -55,7 +55,7 @@
     <div class="position">
         当前位置：
         <a href="{% url "index" %}">首页</a>&nbsp;&nbsp;&gt;&nbsp;&nbsp;
-        <a href={% url "download" %}>下载</a>&nbsp;&nbsp;&gt;&nbsp;&nbsp;
+        <a href={% url "download" %}>资料下载</a>&nbsp;&nbsp;&gt;&nbsp;&nbsp;
         <a>验证姓名</a>
     </div>
     <div class="clear h20"></div>
