--- a/meeting/templates/base.html
+++ b/meeting/templates/base.html
@@ -12,7 +12,7 @@
     <link href="{{ STATIC_URL }}css/position.css" rel="stylesheet" type="text/css"/>
     <link href="{{ STATIC_URL }}css/list.css" rel="stylesheet" type="text/css"/>
     <link href="{{ STATIC_URL }}css/detail.css" rel="stylesheet" type="text/css"/>
-    <script src="{{ STATIC_URL }}simditor/scripts/js/jquery.min.js"></script>
+    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
     {% block head %}
     {% endblock %}
     <style>
